# Plazza

./: CMakeLists.txt  Makefile  README.md  tests.txt
inc/: plazza_header.hpp
inc/Arguments/: Arguments.hpp
inc/Encapsulation/: MessageQueue.hpp  Mutex.hpp  Procedure.hpp  Process.hpp  Shared.hpp  Thread.hpp
inc/Kitchen/: Kitchen.hpp  KitchenManager.hpp  PizzaCooking.hpp  PlazzaKitchens.hpp  Stock.hpp  StockConsume.hpp  ThreadPool.hpp
inc/Pizza/: Pizza.hpp  PizzaMap.hpp
inc/Reception/: CommandParser.hpp  Order.hpp  Orders.hpp  Reception.hpp
inc/Tools/: Tools.hpp
inc/error/: GlobalError.hpp  PizzaError.hpp
src/: CMakeLists.txt  main.cpp
src/Arguments/: Arguments.cpp  CMakeLists.txt
src/Encapsulation/: CMakeLists.txt  MessageQueue.cpp  Mutex.cpp  Procedure.cpp  Process.cpp  Shared.cpp
src/Kitchen/: CMakeLists.txt  Kitchen.cpp  KitchenManager.cpp  PlazzaKitchens.cpp  Stock.cpp  ThreadPool.cpp
src/Pizza/: CMakeLists.txt  Pizza.cpp
src/Reception/: CMakeLists.txt  Order.cpp  Orders.cpp  Reception.cpp
src/Tools/: CMakeLists.txt  Tools.cpp
src/error/: CMakeLists.txt  GlobalError.cpp  PizzaError.cpp
